--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </nav>
       <ul class="contacts-list">
         <li class="item"><a class="link" href="mailto:info@devstudio.com">
-            <svg class="icon envelope" width="16px" height="12px">
+            <svg class="icon envelope" aria-label="связаться с нами по email" width="16px" height="12px">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a></li>
         <li class="item"><a class="link" href="tel:+380961111111">
-            <svg svg class="icon smartphone" width="10px" height="16px">
+            <svg svg class="icon smartphone" aria-label="связаться с нами по телефону" width="10px" height="16px">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a></li>
@@ -51,7 +51,7 @@
         <h2 class="title">наши преимущества</h2>
         <ul class="list">
           <li class="item">
-            <div class="box"><svg class="icon">
+            <div class="box"><svg class="icon" width = "70px" height = "70px" aria-hidden="true">
                 <use href="./images/symbol-defs.svg#icon-antenna"></use>
               </svg></div>
             <h3 class="sub-title">Внимание к деталям</h3>
@@ -61,7 +61,7 @@
             </p>
           </li>
           <li class="item">
-            <div class="box"><svg class="icon">
+            <div class="box"><svg class="icon" width = "70px" height = "70px" aria-hidden="true">
                 <use href="./images/symbol-defs.svg#icon-clock"></use>
               </svg></div>
             <h3 class="sub-title">Пунктуальность</h3>
@@ -71,9 +71,10 @@
             </p>
           </li>
           <li class="item">
-            <div class="box"><svg class="icon">
+            <div class="box"><svg class="icon" width = "70px" height = "70px" aria-hidden="true">
                 <use href="./images/symbol-defs.svg#icon-diagram"></use>
-              </svg></div>
+              </svg>
+            </div>
             <h3 class="sub-title">Планирование</h3>
             <p class="text">
               Равным образом консультация с широким активом в значительной
@@ -81,9 +82,10 @@
             </p>
           </li>
           <li class="item">
-            <div class="box"><svg class="icon">
+            <div class="box"><svg class="icon" width = "70px" height = "70px" aria-hidden="true">
                 <use href="./images/symbol-defs.svg#icon-astronaut"></use>
-              </svg></div>
+              </svg>
+            </div>
             <h3 class="sub-title">Современные технологии</h3>
             <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -123,22 +125,26 @@
             <p class="job-title">Product Designer</p>
             <ul class="social-network">
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
@@ -151,22 +157,26 @@
             <p class="job-title">Frontend Developer</p>
             <ul class="social-network">
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
@@ -179,22 +189,26 @@
             <p class="job-title">Marketing</p>
             <ul class="social-network">
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
@@ -207,22 +221,26 @@
             <p class="job-title">UI Designer</p>
             <ul class="social-network">
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg></a>
               </li>
               <li class="network-item">
-                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
+                    height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
@@ -237,42 +255,42 @@
         <ul class="list">
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo1"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo2"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo3"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo4"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo5"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <svg class="icon" width="106px" height="60px">
+              <svg class="icon" aria-label="перейти на свйт нашего клиента" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-Logo6"></use>
               </svg>
             </a>
