--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
       </nav>
       <ul class="contacts-list">
         <li class="item"><a class="link" href="mailto:info@devstudio.com">
-            <svg class="icon envelope" width="16px" height="12px">
+            <svg class="icon envelope" aria-label="связаться с нами по email" width="16px" height="12px">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a></li>
         <li class="item"><a class="link" href="tel:+380961111111">
-            <svg svg class="icon smartphone" width="10px" height="16px">
+            <svg svg class="icon smartphone" aria-label="связаться с нами по телефону" width="10px" height="16px">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a></li>
@@ -152,22 +152,26 @@
         <p class="subscription-title">присоединяйтесь</p>
         <ul class="social-network footer list">
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+            <a class="#" href="#">href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
+                height="20px">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
+                height="20px">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
+                height="20px">
                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
+                height="20px">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg></a>
           </li>
