--- a/portfolio.html
+++ b/portfolio.html
@@ -152,26 +152,22 @@
         <p class="subscription-title">присоединяйтесь</p>
         <ul class="social-network footer list">
           <li class="network-item">
-            <a class="#" href="#">href="#"><svg class="icon" aria-label="перейти на профиль в instagram" width="20px"
-                height="20px">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в twitter" width="20px"
-                height="20px">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в facebook" width="20px"
-                height="20px">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
               </svg></a>
           </li>
           <li class="network-item">
-            <a class="link" href="#"><svg class="icon" aria-label="перейти на профиль в linkedin" width="20px"
-                height="20px">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg></a>
           </li>
